# scientific-logbook-ai

./: main.py  pyproject.toml  users.json
backend/: langchain_agent.py  logbook_parser.py  main.py  user_manager.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/add-entry/: page.tsx
frontend/src/components/: markdown-renderer.tsx
logbooks/alice_smith/: 2024-06-18-spectroscopy.md  2024-06-20-protein-crystallization.md
logbooks/bob_johnson/: 2024-06-21-dna-sequencing.md
logbooks/carol_davis/: 2024-06-22-cell-culture.md
logbooks/elon_musk/: 2025-06-23-neurolink.md
